--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta property="og:title" content="르탄이 - 프로필 링크" />
-        <meta property="og:description" content="어서와 코딩은 처음이지?" />
-        <meta property="og:image" content="공유할 이미지" />
+        <meta property="og:title" content="히야동산에 오신걸 환영합니다" />
+        <meta property="og:description" content="작고 소소하지만 행복을 그립니다" />
+        <meta property="og:image" content="레몬히야.png" />
         <title>히야동산으로 오신걸 환영합니다</title>
         <style>
             @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
@@ -27,7 +27,7 @@
 
                 border : 2px solid white;
 
-                background-image: url('커피 복사본.png');
+                background-image: url('레몬히야.png');
                 background-position: center;
                 background-size: cover;
             
